--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -5,3 +5,12 @@
     password: admin123
     url: http://172.31.2.133:8080
     user: admin
+
+- name: Create a Multi Branch pipeline
+  community.general.jenkins_job:
+    config: "{{ lookup('file', 'templates/mbranch.xml') }}"
+    name: test
+    password: admin123
+    url: http://172.31.2.133:8080
+    user: admin
+
