--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -9,7 +9,7 @@
 - name: Create a Multi Branch pipeline
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: test
+    name: testm
     password: admin123
     url: http://172.31.2.133:8080
     user: admin
