--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -9,8 +9,9 @@
 - name: Create a Multi Branch pipeline
   community.general.jenkins_job:
     config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: testm
+    name: "{{item.name}}"
     password: admin123
     url: http://172.31.2.133:8080
     user: admin
-
+  loop:
+    - { name: "cart"}
