--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -8,13 +8,7 @@
   loop:
     - { name: "ci-pipelines"}
 
-
-- name: Create a Multi Branch pipelines
-  community.general.jenkins_job:
-    config: "{{ lookup('file', 'templates/mbranch.xml') }}"
-    name: "ci-pipelines/{{item.name}}"
-    password: admin123
-    url: http://172.31.2.133:8080
-    user: admin
+- name: Include Multi Branch task file
+  ansible.builtin.import_tasks: mbranch.yml
   loop:
     - { name: "cart"}
