--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -9,6 +9,6 @@
     - { name: "ci-pipelines"}
 
 - name: Include Multi Branch task file
-  ansible.builtin.import_tasks: mbranch.yml
+  ansible.builtin.include_tasks: mbranch.yml
   loop:
     - { name: "cart"}
