--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -12,3 +12,8 @@
   ansible.builtin.include_tasks: mbranch.yml
   loop:
     - { name: "cart"}
+    - { name: "catalogue"}
+    - { name: "user"}
+    - { name: "shipping"}
+    - { name: "payment"}
+    - { name: "frontend"}
