--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -7,6 +7,7 @@
     user: admin
   loop:
     - { name: "ci-pipelines"}
+    - { name: "terraform"}
 
 - name: Include Multi Branch task file
   ansible.builtin.include_tasks: mbranch.yml
@@ -17,3 +18,8 @@
     - { name: "shipping"}
     - { name: "payment"}
     - { name: "frontend"}
+
+- name: Include Single Branch task file
+  ansible.builtin.include_tasks: sbranch.yml
+  loop:
+    - { name: "infra-create"}
