--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -22,4 +22,4 @@
 - name: Include Single Branch task file
   ansible.builtin.include_tasks: sbranch.yml
   loop:
-    - { name: "infra-create"}
+    - { name: "infra-create", repo: "roboshop-mutable-infra"}
