--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -23,3 +23,4 @@
   ansible.builtin.include_tasks: sbranch.yml
   loop:
     - { name: "infra-create", repo: "roboshop-mutable-infra"}
+    - { name: "k8s-infra-create", repo: "roboshop-kubernetes-infra"}
