--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -22,5 +22,8 @@
 - name: Include Single Branch task file
   ansible.builtin.include_tasks: sbranch.yml
   loop:
-    - { name: "infra-create", repo: "roboshop-mutable-infra"}
-    - { name: "k8s-infra-create", repo: "roboshop-kubernetes-infra"}
+    - { name: "infra-create", repo: "roboshop-mutable-infra", dir: "terraform"}
+    - { name: "k8s-infra-create", repo: "roboshop-kubernetes-infra", dir: "terraform"}
+    - { name: "helm-chart-deploy", repo: "roboshop-helm-chart", dir: ""}
+
+
