--- a/roles/jenkins/tasks/main.yml
+++ b/roles/jenkins/tasks/main.yml
@@ -24,6 +24,6 @@
   loop:
     - { name: "infra-create", repo: "roboshop-mutable-infra", dir: "terraform"}
     - { name: "k8s-infra-create", repo: "roboshop-kubernetes-infra", dir: "terraform"}
-    - { name: "helm-chart-deploy", repo: "roboshop-helm-chart", dir: ""}
+    - { name: "helm-chart-deploy", repo: "roboshop-helm-chart", dir: "/"}
 
 
