--- a/roles/jenkins/tasks/sbranch.yml
+++ b/roles/jenkins/tasks/sbranch.yml
@@ -6,7 +6,7 @@
 - name: Create a Single Branch pipelines
   community.general.jenkins_job:
     config: "{{ lookup('file', '/tmp/sbranch.xml') }}"
-    name: "{{item.dir}}/{{item.name}}"
+    name: "{{item.dir}}{{item.name}}"
     password: admin123
     url: http://172.31.2.133:8080
     user: admin
